# List-library

./: Makefile  README.md  meson.build
include/: list.h  meson.build
include/private/: private_list.h
src/: list.c  list_add.c  list_clone.c  list_contain.c  list_count.c  list_destructor.c  list_get.c  list_index_of.c  list_remove.c  list_remove_range.c  list_set.c  list_stat.c  list_sub_list.c  list_to_array.c  meson.build
subprojects/: criterion.wrap
tests/: meson.build  tests_list.c  tests_list_add.c  tests_list_clone.c  tests_list_contain.c  tests_list_count.c  tests_list_destructor.c  tests_list_get.c  tests_list_index_of.c  tests_list_remove.c  tests_list_remove_data.c  tests_list_remove_range.c  tests_list_reverse.c  tests_list_set.c  tests_list_stat.c  tests_list_sub_list.c  tests_list_to_array.c
