src = [
    'list_remove.c',
    'list_clone.c',
    'list_get.c',
    'list_contain.c',
    'list_index_of.c',
    'list_set.c',
    'list_count.c',
    'list_sub_list.c',
    'list_add.c',
    'list_remove_range.c',
    'list.c',
    'list_stat.c',
    'list_destructor.c',
    'list_reverse.c',
    'list_to_array.c'
]

liblist = library('list', src, include_directories : include, install : true)
